Update page title to 'Md Sarowar Alam' and add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <meta name="description" content="Md Sarowar Alam - Lead DevOps Engineer at Hogarth Worldwide & Lead Instructor at Ostad. 20+ years experience in AWS, Kubernetes, Jenkins, Terraform, and DevOps automation." />
+    <meta name="keywords" content="DevOps Engineer, AWS, Kubernetes, Jenkins, Terraform, Ansible, Cloud Infrastructure, DevOps Instructor" />
+    <meta name="author" content="Md Sarowar Alam" />
+    <title>Md Sarowar Alam - Lead DevOps Engineer & Instructor</title>
   </head>
   <body>
     <div id="root"></div>
