Update profile picture to Profile2.png and refresh db-restore-testing-system.png

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://sarowar-alam.github.io/portfolio/" />
     <meta property="og:title" content="Md Sarowar Alam - Lead DevOps Engineer & Instructor" />
     <meta property="og:description" content="Lead DevOps Engineer at Hogarth Worldwide & Lead Instructor at Ostad. 20+ years experience in AWS, Kubernetes, Jenkins, Terraform, and DevOps automation." />
-    <meta property="og:image" content="https://sarowar-alam.github.io/portfolio/profile.png" />
+    <meta property="og:image" content="https://sarowar-alam.github.io/portfolio/Profile2.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://sarowar-alam.github.io/portfolio/" />
     <meta property="twitter:title" content="Md Sarowar Alam - Lead DevOps Engineer & Instructor" />
     <meta property="twitter:description" content="Lead DevOps Engineer at Hogarth Worldwide & Lead Instructor at Ostad. 20+ years experience in AWS, Kubernetes, Jenkins, Terraform, and DevOps automation." />
-    <meta property="twitter:image" content="https://sarowar-alam.github.io/portfolio/profile.png" />
+    <meta property="twitter:image" content="https://sarowar-alam.github.io/portfolio/Profile2.png" />
     
     <title>Md Sarowar Alam - Lead DevOps Engineer & Instructor</title>
   </head>
